--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # data source
-spring.datasource.url=jdbc:mysql://localhost:3306/db_tests
+spring.datasource.url=jdbc:mysql://localhost:3306/santander
 spring.datasource.username=root
 spring.datasource.password=root
 
